# Face-ID-Authentication-

./: pyproject.toml
logs/: admin.py  models.py
logs/migrations/: 0001_initial.py
profiles/: __init__.py  models.py  signals.py
profiles/migrations/: 0001_initial.py
src/: settings.py  urls.py  views.py
templates/: base.html
