[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["SahilMehdiyev <branchsahil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
cmake = "^3.30.5"
face-recognition = "^1.3.0"
drf-api-logger = "^1.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
